# SFMC-API-Python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  PLAN_stream_reconnection.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: API_REFERENCE.md  authentication.md  cli.md  configuration.md  file_operations.md  follow_glider.md  gen_api_docs.py  getting_started.md  glider_management.md  glossary.md  monitor_glider.md  openapi.yaml  plans.md  pull_new_downloads.md  script_control.md  streaming.md  troubleshooting.md
examples/: drifter_config.yaml  drifter_follower.py  get_glider_details.py  monitor_glider.py  stream_glider_events.py
examples/systemd/: README.md  sfmc-monitor-glider-foo.service
maFiles/: drift_at_depth_yo30.ma  goto_l90.ma  sample90.ma  sfmc.mi  surfac30.ma  surfac90.ma  surfac91.ma  yo30.ma  yo90.ma
src/sfmc_api/: __init__.py  __main__.py  _http.py  auth.py  cli.py  client.py  config.py  coordinates.py  dialog_parser.py  disconnect_notify.py  exceptions.py  follow_glider.py  follower.py  ma_writer.py  monitor_glider.py  pull_new_downloads.py  stomp.py  stream_reconnect.py  test_runner.py
tests/: conftest.py  test___main__.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_coordinates.py  test_dialog_parser.py  test_disconnect_notify.py  test_drifter_follower.py  test_exceptions.py  test_follow_glider.py  test_follower.py  test_http.py  test_ma_writer.py  test_monitor_glider.py  test_pull_new_downloads.py  test_stomp_connection.py  test_stomp_frames.py  test_stream_reconnect.py  test_stream_supervisors.py  test_test_runner.py
