[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfmc-api"
version = "0.1.0"
description = "Python client for the Slocum Fleet Management Center (SFMC) REST API"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<1",
    "websockets>=13,<15",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit>=3",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-httpx>=0.34",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sfmc_api"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
