[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfmc-api"
version = "0.1.0"
description = "Python client for the Slocum Fleet Management Center (SFMC) REST API"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    {name = "Pat Welch"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "websockets>=13,<15",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit>=3",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-httpx>=0.34",
    "ruff>=0.4",
]

[project.scripts]
sfmc-api = "sfmc_api.cli:main"
sfmc-api-test = "sfmc_api.test_runner:main"

[project.urls]
Homepage = "https://github.com/mousebrains/SFMC-API-Python"
Repository = "https://github.com/mousebrains/SFMC-API-Python"
Issues = "https://github.com/mousebrains/SFMC-API-Python/issues"
Changelog = "https://github.com/mousebrains/SFMC-API-Python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE", "/CHANGELOG.md", "/pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/sfmc_api"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
branch = true
source = ["sfmc_api"]
omit = ["src/sfmc_api/test_runner.py"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
addopts = "--cov-fail-under=70"
